baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__10_formatter__optional_callback_direct.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 15039
---
// === Optional direct callback invocation with omitted throws ===

function optional_apply(cb: (() -> int)?) -> int? {
    cb?.()
}

function optional_apply_with_body(cb: (() -> int)?) -> int? {
    if (cb == null) {
        throw "missing callback"
    }
    cb()
}
